# lz4-erlang

./: .bazelrc  .gitignore  BUILD.bazel  BUILD.lz4_src  BUILD.nif_helpers  LICENSE  MODULE.bazel  Makefile  README.md  WORKSPACE.bazel  erlang.mk  extensions.bzl  rebar.config  user-template.bazelrc
.bcr/: metadata.template.json  source.template.json
.github/workflows/: publish-rabbitmq-bcr.yml  release.yml  test.yml  update-otp-patch-version.yaml  update-otp-patches.yaml
c_src/: lz4.c  lz4_erlang.h  lz4f.c
ebin/: lz4.app
src/: lz4_nif.erl  lz4f.erl
test/: lz4f_SUITE.erl
toolchains/: BUILD.bazel  cc_toolchain_config.bzl
