module(
    name = "lz4",
    version = "1.9.2.3",
)

bazel_dep(
    name = "platforms",
    version = "0.0.5",
)

external_deps = use_extension(
    ":extensions.bzl",
    "external_deps",
)

use_repo(
    external_deps,
    "lz4_src",
    "nif_helpers",
    "pdf_reference",
)

bazel_dep(
    name = "rules_erlang",
    version = "3.9.11",
)

erlang_config_extension = use_extension(
    "@rules_erlang//bzlmod:extensions.bzl",
    "erlang_config",
    dev_dependency = True,
)

erlang_config_extension.internal_erlang_from_github_release(
    name = "24",
    sha256 = "0e63cd975f126ae9f17c36062d63e8629bb984e013b18a8a13ad634035dc414f",
    version = "24.3.4.11",
)

erlang_config_extension.internal_erlang_from_github_release(
    name = "25",
    sha256 = "1cd2fbe225a412009cda9b1fd9f3fff0293e75e3020daa48abf68721471e91eb",
    version = "25.1.2.1",
)

use_repo(
    erlang_config_extension,
    "erlang_config",
)

erlang_package = use_extension(
    "@rules_erlang//bzlmod:extensions.bzl",
    "erlang_package",
)

erlang_package.hex_package(
    name = "host_triple",
    sha256 = "26fee396a7c0e1d66115e74638a795366496b59bf13f474f3ae1c4491fd14fc5",
    version = "0.1.0",
)

use_repo(
    erlang_package,
    "host_triple",
)

erlang_dev_package = use_extension(
    "@rules_erlang//bzlmod:extensions.bzl",
    "erlang_package",
    dev_dependency = True,
)

erlang_dev_package.git_package(
    testonly = True,
    branch = "master",
    repository = "extend/ct_helper",
)

use_repo(
    erlang_dev_package,
    "ct_helper",
)
