module(
    name = "lz4-erlang",
    version = "1.9.4.0",
)

bazel_dep(
    name = "platforms",
    version = "0.0.7",
)

external_deps = use_extension(
    ":extensions.bzl",
    "external_deps",
)

use_repo(
    external_deps,
    "lz4_src",
    "nif_helpers",
)

external_test_deps = use_extension(
    ":extensions.bzl",
    "external_test_deps",
    dev_dependency = True,
)

use_repo(
    external_test_deps,
    "pdf_reference",
)

bazel_dep(
    name = "rules_erlang",
    version = "3.15.1",
)

erlang_config = use_extension(
    "@rules_erlang//bzlmod:extensions.bzl",
    "erlang_config",
    dev_dependency = True,
)

erlang_config.internal_erlang_from_github_release(
    name = "24",
    sha256 = "2f0661b1f98b01c26e2bde7234ef587f77e5ee0e384f3b1221496782bf9c8b28",
    version = "24.3.4.17",
)

erlang_config.internal_erlang_from_github_release(
    name = "25",
    sha256 = "0a7338415c8eb6ae25664bfd1a10631c293838ef072665223a524831b823a8b7",
    version = "25.3.2.10",
)

erlang_config.internal_erlang_from_github_release(
    name = "26",
    sha256 = "47853ea9230643a0a31004433f07a71c1b92d6e0094534f629e3b75dbc62f193",
    version = "26.0.2",
)

use_repo(
    erlang_config,
    "erlang_config",
)

erlang_package = use_extension(
    "@rules_erlang//bzlmod:extensions.bzl",
    "erlang_package",
)

erlang_package.hex_package(
    name = "host_triple",
    sha256 = "26fee396a7c0e1d66115e74638a795366496b59bf13f474f3ae1c4491fd14fc5",
    version = "0.1.0",
)

use_repo(
    erlang_package,
    "host_triple",
)

erlang_dev_package = use_extension(
    "@rules_erlang//bzlmod:extensions.bzl",
    "erlang_package",
    dev_dependency = True,
)

erlang_dev_package.git_package(
    testonly = True,
    branch = "master",
    repository = "extend/ct_helper",
)

use_repo(
    erlang_dev_package,
    "ct_helper",
)
