load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive", "http_file")

http_archive(
    name = "io_buildbuddy_buildbuddy_toolchain",
    sha256 = "48546946879b1fd2dcba327ba15776c822f2ce9a9ef1077be9bf3ecadcc1564a",
    strip_prefix = "buildbuddy-toolchain-b2f5e7e3b126c6d7cf243227147478c0959bfc95",
    urls = ["https://github.com/buildbuddy-io/buildbuddy-toolchain/archive/b2f5e7e3b126c6d7cf243227147478c0959bfc95.zip"],
)

load("@io_buildbuddy_buildbuddy_toolchain//:deps.bzl", "buildbuddy_deps")

buildbuddy_deps()

load("@io_buildbuddy_buildbuddy_toolchain//:rules.bzl", "buildbuddy")

buildbuddy(
    name = "buildbuddy_toolchain",
    llvm = True,
)

http_archive(
    name = "rules_pkg",
    sha256 = "038f1caa773a7e35b3663865ffb003169c6a71dc995e39bf4815792f385d837d",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_pkg/releases/download/0.4.0/rules_pkg-0.4.0.tar.gz",
        "https://github.com/bazelbuild/rules_pkg/releases/download/0.4.0/rules_pkg-0.4.0.tar.gz",
    ],
)

load("@rules_pkg//:deps.bzl", "rules_pkg_dependencies")

rules_pkg_dependencies()

http_archive(
    name = "bazel-erlang",
    sha256 = "03b75fae7e3d3e80644ba1b0f1bf43b9da3c7c36435ea7baba0d0f87b3c05482",
    strip_prefix = "bazel-erlang-1.2.0",
    urls = ["https://github.com/rabbitmq/bazel-erlang/archive/refs/tags/1.2.0.zip"],
)

load("@bazel-erlang//:bazel_erlang.bzl", "bazel_erlang_deps")

bazel_erlang_deps()

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository", "new_git_repository")

git_repository(
    name = "rabbitmq-server",
    branch = "master",
    remote = "https://github.com/rabbitmq/rabbitmq-server.git",
)

# load("@rabbitmq-server//:workspace_helpers.bzl", "rabbitmq_external_deps")

# rabbitmq_external_deps()

load("@bazel-erlang//:hex_pm.bzl", "hex_pm_bazel_erlang_lib")

hex_pm_bazel_erlang_lib(
    name = "host_triple",
    sha256 = "26fee396a7c0e1d66115e74638a795366496b59bf13f474f3ae1c4491fd14fc5",
    version = "0.1.0",
)

load("@bazel-erlang//:github.bzl", "github_bazel_erlang_lib")

github_bazel_erlang_lib(
    name = "ct_helper",
    org = "extend",
)

new_git_repository(
    name = "lz4_src",
    build_file = "//:BUILD.lz4_src",
    remote = "https://github.com/lz4/lz4",
    tag = "v1.9.2",
)

new_git_repository(
    name = "nif_helpers",
    build_file = "//:BUILD.nif_helpers",
    commit = "4af25bf765536496ed2b10e22eb4e6e3304b9aee",
    remote = "https://github.com/ninenines/nif_helpers",
)

http_file(
    name = "pdf_reference",
    sha256 = "a759fd5a7f13a7af9a4aa0894a6af4f7f8b2ecc8c1d743c7292736458298fd56",
    urls = ["https://www.adobe.com/content/dam/Adobe/en/devnet/acrobat/pdfs/pdf_reference_1-7.pdf"],
)
